[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 404.0
margin_top = 196.0
margin_right = 619.0
margin_bottom = 404.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 208.0
margin_bottom = 201.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 161.0
margin_bottom = 154.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 121.0
margin_bottom = 14.0
text = "Shooty Game"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 121.0
margin_bottom = 114.0
custom_constants/separation = 10

[node name="LocalMultiButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 121.0
margin_bottom = 20.0
text = "Local Multiplayer"

[node name="MultiButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 121.0
margin_bottom = 50.0
text = "Multiplayer"

[node name="TrainingButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 121.0
margin_bottom = 80.0
text = "Training Mode"
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/LocalMultiButton" to="." method="switch_to_localmulti"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MultiButton" to="." method="switch_to_multi"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TrainingButton" to="." method="switch_to_training"]
